# qcode

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: launch.json
.github/workflows/: deploy-web.yml  release.yml
docs/: ATTRIBUTION.md  multi-model-engine-routing.md
public/: _redirects
remotion-video/: package.json  pnpm-lock.yaml  tsconfig.json
remotion-video/src/: IntroVideo.tsx  Root.tsx
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/runtime/: package.json
src-tauri/src/: lib.rs  main.rs  menu.rs  secret.rs
src/components/ui/: border-beam.tsx  spotlight.tsx
src/lib/: account.ts  agent.ts  agents.ts  analytics.ts  approvals.ts  artifact-upload.ts  attachments.ts  auth.ts  bash-session.ts  billing.ts  blocks-snapshot.ts  browser-sidecar.ts  catalog.ts  custom-agents.ts  deep-link.ts  diff.ts  env-probe.ts  feature-flags.ts  fuzzy.ts  git-branch.ts  git-checkpoint.ts  git-info.ts  gitignore.ts  hooks.ts  images.ts  in-flight.ts  intent-classifier.ts  markdown.ts  mcp-servers.ts  memory.ts  mode-tracking.ts  models.ts  permission-rules.ts  plan-tiers.ts  plans.ts  qcode-me.ts  qcode-paths.ts  qcode-usage.ts  qlaud-client.ts  queries.ts  (+20 more)
src/lib/engines/: aig-history.ts  claude-code.ts  sandbox-agent.ts
src/lib/legacy/: agent.ts  bash-session.ts  browser-sidecar.ts  custom-agents.ts  env-probe.ts  frontmatter.ts  git-checkpoint.ts  hooks.ts  memory.ts  permission-rules.ts  plans.ts  qcode-paths.ts  skills.ts  tool-results.ts  tools.ts
src/lib/runtime/: index.ts  sandbox-session.ts  sandbox.ts  tauri.ts  types.ts
src/lib/skills/: deploy-cloudflare.ts  qlaud-media.ts  qlaud-tools.ts  video-creator.ts
src/ui/: ApprovalCard.tsx  ChatSurface.tsx  CommandPalette.tsx  DiffView.tsx  DiscoveryGrid.tsx  FileTree.tsx  Markdown.tsx  MentionMenu.tsx  ModelPicker.tsx  PlayPage.tsx  QlaudMark.tsx  RightRail.tsx  Select.tsx  SettingsDrawer.tsx  SignInGate.tsx  StatusBar.tsx  ThreadList.tsx  ToolCallCard.tsx  WorkspaceBadge.tsx
src/ui/legacy/: ApprovalCard.tsx  ToolCallCard.tsx
src/ui/legacy/tool-output/: GrepView.tsx  MetaToolView.tsx  ReadFileView.tsx
src/ui/tool-output/: BashView.tsx  BrowserView.tsx  GlobView.tsx  GrepView.tsx  ListFilesView.tsx  MetaToolView.tsx  ReadFileView.tsx
