[package]
name = "qcode"
version = "0.1.0-alpha.1"
description = "qcode — multi-model coding agent powered by qlaud"
authors = ["qlaud <support@qlaud.ai>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-deep-link = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
# OS-native credential storage. Uses Apple Keychain on macOS,
# Credential Manager on Windows, libsecret/Secret Service on Linux.
# Single API; the right backend is picked per platform at compile time.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
# macOS vibrancy + Windows acrylic blur for the title bar. No-op on Linux.
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
